Primer commit - Chatbot FastAPI listo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <script>
   // Config
-  const API_ENDPOINT = 'https://ocupai-bot.onrender.com/api/chat'; // backend en Render
+  const API_ENDPOINT = 'https://ocupai-chatbot.onrender.com/api/chat'; // backend en Render
   const BOT_INITIAL = "¡Hola! Soy OcupAI BOT. ¿En qué puedo ayudarte hoy?";
   let loading = false;
 
